<resources>
    <string name="app_name">Pathfinder</string>
    <string name="title_activity_feed">Feed</string>
    <string name="title_activity_article">Article</string>
    <string name="title_activity_add_article">New Article</string>
    <string name="title_tab_grid">Grid</string>
    <string name="title_tab_list">List</string>
    <string name="title_tab_liked">Liked</string>
    <string name="app_title">Pathfinder</string>
    <string name="walkthrough_text_1" translatable="true">Pathfinder suggests tech-related articles and stories from around the internet.</string>
    <string name="walkthrough_text_2" translatable="true">Read an article &amp; like it by clicking the heart. While you’re reading, we’ll be doing some thinking in the background.</string>
    <string name="walkthrough_text_3" translatable="true">Over time, we’ll begin recommending top courses &amp; educational tools for you based on your reading habits. So let’s dig in!</string>
    <string name="button_learn_more" translatable="true">Learn More</string>
    <string name="button_view_story" translatable="true">View Story</string>
    <string name="interests_graph_header" translatable="true">Your Interests</string>
    <string name="liking_prompt" translatable="true">Enjoying this article?</string>
    <string name="action_cancel">Cancel</string>
    <string name="article_title_hint">Title</string>
    <string name="article_url_hint">Article URL</string>
    <string name="image_url_hint">Image URL (optional)</string>
    <string name="nanodegrees_hint">Select Nanodegree(s)</string>
    <string name="dialog_nanodegrees_title">Select all that apply</string>
    <string name="dialog_nanodegrees_positive_text">OK</string>
    <string name="dialog_nanodegrees_negative_text">Cancel</string>
    <string name="validation_enter_title">Please enter a title</string>
    <string name="validation_invalid_article_url">Please enter a valid article URL</string>
    <string name="validation_invalid_image_url">Please enter a valid image URL</string>
    <string name="validation_select_nanodegree">Please select a relevant Nanodegree</string>
    <string name="nano_title_front_end" translatable="true">Front-end Developer Nanodegree</string>
    <string name="nano_title_android" translatable="true">Android Developer Nanodegree</string>
    <string name="nano_title_data_analyst" translatable="true">Data Analyst Nanodegree</string>
    <string name="nano_title_ios" translatable="true">iOS Developer Nanodegree</string>
    <string name="nano_title_tech_entrepreneur" translatable="true">Tech Entrepreneur Nanodegree</string>
    <string name="nano_title_beginning_ios" translatable="true">Beginning iOS App Development Nanodgree</string>
    <string name="nano_title_full_stack" translatable="true">Full Stack Web Developer Nanodegree</string>
    <string name="nano_title_programming_fundamentals" translatable="true">Programming Fundamentals Nanodegree</string>
    <string name="global_submit_button_label" translatable="true">Submit</string>
    <string name="global_ok_button_label" translatable="true">OK</string>
    <string name="global_try_again_button_label" translatable="true">Try Again</string>
    <string name="global_cancel_button_label" translatable="true">Cancel</string>
    <string name="global_error_required_field" translatable="true">Required Field</string>
    <string name="global_error_valid_email_required_field" translatable="true">Valid Email Address Required</string>
    <string name="global_error_valid_password_required_field" translatable="true">Valid Password Required Field</string>
    <string name="global_hint_email" translatable="true">Email Address</string>
    <string name="global_hint_last_name" translatable="true">Last Name</string>
    <string name="global_hint_first_name" translatable="true">First Name</string>
    <string name="global_hint_password" translatable="true">Password</string>
    <string name="global_hint_confirm_password" translatable="true">Confirm Password</string>
    <string name="global_forgot_password_button_label" translatable="true">Forgot password</string>
    <string name="global_create_account_button_label" translatable="true">Create Account</string>
    <string name="udacity_login_button_label" translatable="true">Udacity</string>
    <string name="udacity_login_required_fields" translatable="true">Please verify email and password</string>
    <string name="udacity_login_required_fields_title" translatable="true">Authentication Error</string>
    <string name="udacity_login_email_label" translatable="true">Email Account</string>
    <string name="udacity_login_password_label" translatable="true">Password</string>
    <string name="google_login_button_label" translatable="true">Google</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="parse_app_id" translatable="false">m5DPjE3I2Aghdmu49nZcdnsLUkeZFN84jtETLYHu</string>
    <string name="parse_client_key" translatable="false">GdF3lzXZL3zPF1T1DwDB2G9I1YOBDdLaLPAFs3GY</string>
    <string name="facebook_app_id" translatable="false">365362206864879</string>
    <string name="profile_title_logged_in" translatable="true">Login</string>
    <string name="profile_logout_button_label" translatable="true">Logout</string>
    <string name="facebook_login_button_label" translatable="true">Facebook</string>
    <string name="twitter_consumer_key" translatable="false">1kFNCee0iCTwZ5Jgp33ICCsoa</string>
    <string name="twitter_consumer_secret" translatable="false">uIaT90DAd9pdlYumfqaPHvZrbAT4pKZSsSe6r8Lmv0lsLX4ERD</string>
    <string name="twitter_login_button_label" translatable="true">Twitter</string>
    <string name="alert" translatable="true">Alert</string>
    <string name="alert_button" translatable="true">OK</string>
    <string name="error_network" translatable="true">There was a network error, please verify you are connected</string>
    <string name="error_no_response" translatable="true">There was no response from the server</string>
    <string name="error_network_http_error" translatable="true">HTTP error</string>
    <string name="error_unknown" translatable="true">Unknown Error</string>
    <string name="com_parse_ui_logo_content_description">Logo</string>
    <string name="com_parse_ui_progress_dialog_text">Loading...</string>
    <string name="com_parse_ui_username_input_hint">Username</string>
    <string name="com_parse_ui_password_input_hint">Password</string>
    <string name="com_parse_ui_forgot_password_button_label"><u>Forgot password</u></string>
    <string name="com_parse_ui_parse_login_button_label">Log in</string>
    <string name="com_parse_ui_parse_signup_button_label">Sign up</string>
    <string name="com_parse_ui_facebook_login_button_label">Log in with Facebook</string>
    <string name="com_parse_ui_twitter_login_button_label">Log in with Twitter</string>
    <string name="com_parse_ui_email_input_hint">Email</string>
    <string name="com_parse_ui_confirm_password_input_hint">Re-enter password</string>
    <string name="com_parse_ui_name_input_hint">Name</string>
    <string name="com_parse_ui_create_account_button_label">Create account</string>
    <string name="com_parse_ui_no_username_toast">Please enter your username</string>
    <string name="com_parse_ui_no_password_toast">Please enter your password</string>
    <string name="com_parse_ui_parse_login_invalid_credentials_toast">The username and password you entered don\'t match</string>
    <string name="com_parse_ui_parse_login_failed_unknown_toast">Could not log in, please try again later</string>
    <string name="com_parse_ui_facebook_login_failed_toast">Facebook login failed</string>
    <string name="com_parse_ui_twitter_login_failed_toast">Twitter login failed</string>
    <plurals name="com_parse_ui_password_too_short_toast">
        <item quantity="one">Password must be at least %d character long</item>
        <item quantity="other">Password must be at least %d characters long</item>
    </plurals>
    <string name="com_parse_ui_username_taken_toast">Username is already taken, please choose a different one</string>
    <string name="com_parse_ui_reenter_password_toast">Please re-enter your password</string>
    <string name="com_parse_ui_mismatch_confirm_password_toast">Passwords don\'t match, please try again</string>
    <string name="com_parse_ui_no_email_toast">Please enter your email</string>
    <string name="com_parse_ui_invalid_email_toast">Email is invalid, please correct it and try again</string>
    <string name="com_parse_ui_email_taken_toast">Email is already taken, please reset your password instead</string>
    <string name="com_parse_ui_no_name_toast">Please enter your name</string>
    <string name="com_parse_ui_signup_failed_unknown_toast">Could not sign up, please try again later</string>
    <string name="com_parse_ui_login_help_instructions">Enter your email to recover your password</string>
    <string name="com_parse_ui_login_help_email_input_hint">Email</string>
    <string name="com_parse_ui_login_help_submit_button_label">Submit</string>
    <string name="com_parse_ui_login_help_login_again_button_label">Back to Login</string>
    <string name="com_parse_ui_login_help_submit_failed_unknown">Failed to request password reset, please try again</string>
    <string name="com_parse_ui_login_help_email_sent">Please check your email for instructions on how to access your account</string>
    <string name="com_parse_ui_login_warning_layout_missing_username_field">Layout missing username field</string>
    <string name="com_parse_ui_login_warning_layout_missing_password_field">Layout missing password field</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_button">Layout missing login button</string>
    <string name="com_parse_ui_login_warning_layout_missing_signup_button">Layout missing signup button</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_help_button">Layout missing login help button</string>
    <string name="com_parse_ui_login_warning_disabled_username_password_login">Disabled username/password login and signup because of missing layout elements</string>
    <string name="com_parse_ui_login_warning_disabled_facebook_login">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="com_parse_ui_login_warning_disabled_twitter_login">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="com_parse_ui_login_warning_parse_login_failed">"Parse username/password login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_failed">"Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_failed">"Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_user_update_failed">"Updating user object after Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_user_update_failed">"Updating user object after Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_parse_signup_failed">"Parse signup failed, exception: "</string>
    <string name="com_parse_ui_login_warning_password_reset_failed">"Parse password reset failed, exception: "</string>
    <string name="nano_button_learn_more">Learn More</string>
    <string name="like_summary_title">Your Interests</string>
    <string name="like_summary_cat_1">Front-End</string>
    <string name="like_summary_cat_2">Full Stack</string>
    <string name="like_summary_cat_3">Data Analyst</string>
    <string name="rec_likes">likes</string>
    <string name="rec_likes_default_value">0</string>
    <string name="rec_toolbar_title">Recommended Nanodegree</string>
    <string name="desc_nanodegree_logo">Recommended Nanodegree logo.</string>
</resources>