<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="16dp">

  <EditText
    android:id="@+id/etEmail"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="25dp"
    android:hint="@string/global_hint_email"
    android:inputType="textEmailAddress"/>

  <EditText
    android:id="@+id/etFirstName"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/etEmail"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="25dp"
    android:hint="@string/global_hint_first_name"
    android:inputType="text"/>

  <EditText
    android:id="@+id/etLastName"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/etFirstName"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="25dp"
    android:hint="@string/global_hint_last_name"
    android:inputType="text"/>

  <EditText
    android:id="@+id/etPassword"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/etLastName"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="25dp"
    android:hint="@string/global_hint_password"
    android:inputType="textPassword"
    android:maxLength="10"/>

  <EditText
    android:id="@+id/etPasswordConfirm"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/etPassword"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="25dp"
    android:hint="@string/global_hint_confirm_password"
    android:inputType="textPassword"/>

  <Button
    android:id="@+id/btnCreateAccount"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_alignRight="@id/etPassword"
    android:layout_below="@id/etPasswordConfirm"
    android:layout_marginTop="25dp"
    android:text="@string/global_create_account_button_label"/>

</RelativeLayout>