<LinearLayout android:id="@+id/parse_login"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/primary_dark"
  android:gravity="center"
  android:orientation="vertical"
  android:paddingBottom="@dimen/com_parse_ui_vertical_margin"
  android:paddingLeft="@dimen/com_parse_ui_horizontal_margin"
  android:paddingRight="@dimen/com_parse_ui_horizontal_margin"
  android:paddingTop="@dimen/com_parse_ui_vertical_margin"
  android:visibility="visible">

  <include
    android:id="@+id/iv_logo"
    layout="@layout/login_app_logo"
    android:layout_width="276dp"
    android:layout_height="144dp"
    android:layout_weight="0.50"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.5"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
      android:id="@+id/et_login_username_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:hint="@string/global_hint_email"
      android:visibility="visible"
      android:textColor="#ffffff"
      android:textColorHint="#d4d4d4"/>

    <EditText
      android:id="@+id/et_login_password_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
      android:fontFamily="sans-serif"
      android:hint="@string/global_hint_password"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      android:visibility="visible"
      android:textColor="#ffffff"
      android:textColorHint="#d4d4d4"/>

    <LinearLayout
      android:id="@+id/parse_buttons"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing"
      android:visibility="visible">

      <Button
        android:id="@+id/btn_login_button"
        style="@style/ParseLoginUI.Button"
        android:layout_weight="0.5"
        android:text="@string/com_parse_ui_parse_login_button_label"
        android:visibility="visible"/>

      <Button
        android:id="@+id/btn_signup_button"
        style="@style/ParseLoginUI.Button"
        android:layout_marginLeft="@dimen/com_parse_ui_small_horizontal_spacing"
        android:layout_weight="0.5"
        android:text="@string/com_parse_ui_parse_signup_button_label"
        android:visibility="visible"/>
    </LinearLayout>

    <Button
      android:id="@+id/btn_forgot_login"
      style="@style/ParseLoginUI.Button"
      android:layout_marginBottom="@dimen/com_parse_ui_small_vertical_spacing"
      android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
      android:text="@string/global_forgot_password_button_label"
      android:visibility="visible"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <Button
        android:id="@+id/btn_google_login"
        style="@style/ParseLoginUI.Button.ThirdPartyLogin"
        android:layout_marginBottom="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_marginRight="@dimen/com_parse_ui_small_horizontal_spacing"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_weight=".5"
        android:background="@color/google_red"
        android:drawableLeft="@drawable/ic_google"
        android:text="@string/google_login_button_label"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"/>


      <Button
        android:id="@+id/btn_udacity_login"
        style="@style/ParseLoginUI.Button.ThirdPartyLogin"
        android:layout_marginBottom="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_marginLeft="@dimen/com_parse_ui_small_horizontal_spacing"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_weight=".5"
        android:background="@color/udacity_blue"
        android:drawableLeft="@drawable/ic_udacity"
        android:text="@string/udacity_login_button_label"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal">

      <Button
        android:id="@+id/btn_twitter_login"
        style="@style/ParseLoginUI.Button.ThirdPartyLogin"
        android:layout_marginBottom="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_marginRight="@dimen/com_parse_ui_small_horizontal_spacing"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_weight=".5"
        android:background="@drawable/com_parse_ui_twitter_login_button_background_selector"
        android:drawableLeft="@drawable/ic_twitter"
        android:text="@string/twitter_login_button_label"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"/>

      <Button
        android:id="@+id/btn_facebook_login"
        style="@style/ParseLoginUI.Button.ThirdPartyLogin"
        android:layout_marginBottom="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_marginLeft="@dimen/com_parse_ui_small_horizontal_spacing"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_weight=".5"
        android:background="@drawable/com_parse_ui_facebook_login_button_background_selector"
        android:drawableLeft="@drawable/ic_facebook"
        android:text="@string/facebook_login_button_label"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"/>
    </LinearLayout>

  </LinearLayout>
</LinearLayout>
